fix(lobby): handle icon overflow and fix search
this is one commit because the player list summary feature needed a partial refactor of stuff, including search.

--- a/pages/live/style.css
+++ b/pages/live/style.css
@@ -23,13 +23,24 @@
 
 .lobby-players {
   right: 20px;
-  bottom: 0;
+  bottom: 5px;
   position: absolute;
 }
-.lobby-players img {
+.lobby-players * {
   border-radius: 100%;
+  width: 44px;
   height: 44px;
+  line-height: 44px;
   padding: 5px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.lobby-players div {
+  padding: 0;
+  margin: 5px;
+  font-weight: bold;
+  background-color: #666;
+  cursor: default;
 }
 
 .lobby-button {
